--- a/.github/workflows/pr_to_main.yml
+++ b/.github/workflows/pr_to_main.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions CI
+name: PR to main
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
    # Triggers the workflow on push or pull request events but only for the "main" branch
