--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "nx": "15.7.2",
     "prettier": "^2.6.2",
     "typescript": "~4.8.2"
+  },
+  "volta": {
+    "node": "16.19.1",
+    "yarn": "1.22.19"
   }
 }
