--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.10.5",
+    "@emotion/server": "11.10.0",
+    "@emotion/styled": "11.10.5",
+    "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
+    "@emotion/babel-plugin": "11.10.5",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
     "@nrwl/jest": "15.7.2",
     "@nrwl/js": "15.7.2",
     "@nrwl/linter": "15.7.2",
+    "@nrwl/nest": "^15.7.2",
+    "@nrwl/next": "^15.7.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^15.7.2",
     "@nrwl/vite": "15.7.2",
@@ -29,8 +37,10 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
+    "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
+    "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
