--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "@emotion/react": "11.10.5",
     "@emotion/server": "11.10.0",
     "@emotion/styled": "11.10.5",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.0.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
     "@emotion/babel-plugin": "11.10.5",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cypress": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
     "@nrwl/jest": "15.7.2",
@@ -23,9 +31,11 @@
     "@nrwl/linter": "15.7.2",
     "@nrwl/nest": "^15.7.2",
     "@nrwl/next": "^15.7.2",
+    "@nrwl/node": "15.7.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^15.7.2",
     "@nrwl/vite": "15.7.2",
+    "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
