--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native": "0.71.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -25,6 +26,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cypress": "15.7.2",
+    "@nrwl/detox": "15.7.2",
     "@nrwl/eslint-plugin-nx": "15.7.2",
     "@nrwl/jest": "15.7.2",
     "@nrwl/js": "15.7.2",
@@ -34,14 +36,23 @@
     "@nrwl/node": "15.7.2",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^15.7.2",
+    "@nrwl/react-native": "^15.7.2",
     "@nrwl/vite": "15.7.2",
     "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/cli": "10.1.3",
+    "@react-native-community/cli-platform-android": "10.1.3",
+    "@react-native-community/cli-platform-ios": "10.1.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/jest-native": "5.4.1",
     "@testing-library/react": "13.4.0",
+    "@testing-library/react-native": "11.5.2",
     "@types/jest": "28.1.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/react-native": "0.71.2",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^3.0.0",
@@ -49,6 +60,7 @@
     "@vitest/ui": "^0.25.8",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
+    "detox": "20.1.1",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "8.1.0",
@@ -58,10 +70,20 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
+    "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jest-react-native": "18.0.0",
     "jsdom": "~20.0.3",
+    "metro": "0.74.1",
+    "metro-babel-register": "0.74.1",
+    "metro-react-native-babel-preset": "0.74.1",
+    "metro-react-native-babel-transformer": "0.74.1",
+    "metro-resolver": "0.74.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "react-native-config": "1.5.0",
+    "react-native-svg": "13.8.0",
+    "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
