--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "7.12.13",
     "@emotion/babel-plugin": "11.10.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -37,6 +39,7 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "^15.7.2",
     "@nrwl/react-native": "^15.7.2",
+    "@nrwl/storybook": "^15.7.2",
     "@nrwl/vite": "15.7.2",
     "@nrwl/webpack": "15.7.2",
     "@nrwl/workspace": "15.7.2",
@@ -44,6 +47,11 @@
     "@react-native-community/cli": "10.1.3",
     "@react-native-community/cli-platform-android": "10.1.3",
     "@react-native-community/cli-platform-ios": "10.1.1",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/builder-vite": "^0.2.6",
+    "@storybook/core-server": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@svgr/webpack": "^6.1.2",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.1",
     "@testing-library/react": "13.4.0",
@@ -59,6 +67,7 @@
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "babel-jest": "28.1.1",
+    "babel-loader": "8.1.0",
     "cypress": "^12.2.0",
     "detox": "20.1.1",
     "eslint": "~8.15.0",
@@ -69,6 +78,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "28.1.1",
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
@@ -88,6 +98,7 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
+    "url-loader": "^4.1.1",
     "vite": "^4.0.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
