--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "private": true,
   "name": "coding-practices",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
-  "private": true,
+  "scripts": {
+    "precommit": "lint-staged"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/server": "11.10.0",
@@ -80,11 +87,13 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "jest": "28.1.1",
     "jest-circus": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-react-native": "18.0.0",
     "jsdom": "~20.0.3",
+    "lint-staged": "^13.1.2",
     "metro": "0.74.1",
     "metro-babel-register": "0.74.1",
     "metro-react-native-babel-preset": "0.74.1",
@@ -92,6 +101,7 @@
     "metro-resolver": "0.74.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
+    "prettier-package-json": "^2.8.0",
     "react-native-config": "1.5.0",
     "react-native-svg": "13.8.0",
     "react-native-svg-transformer": "1.0.0",
@@ -105,13 +115,14 @@
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
   },
+  "lint-staged": {
+    "package.json": [
+      "prettier-package-json --write",
+      "git add"
+    ]
+  },
   "volta": {
     "node": "16.19.1",
     "yarn": "1.22.19"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
